Add energy provider block

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,9 @@ minecraft_version_range=[1.20.1,1.21)
 forge_version=47.2.0
 forge_version_range=[47.2,)
 kff_version=4.11.0
+
 jei_version=15.20.0.106
+mekanism_version=1.20.1-10.4.15.75
 
 mapping_channel=parchment
 mapping_version=2023.09.03-1.20.1
@@ -20,3 +22,8 @@ mod_description=Own a private static void world.
 mod_license=All rights reserved
 # Used in maven publishing, should match mod sources: https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=rhx.sync
+
+systemProp.http.proxyHost=localhost
+systemProp.http.proxyPort=7890
+systemProp.https.proxyHost=localhost
+systemProp.https.proxyPort=7890
